--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1504,3 +1504,123 @@ select.d_select {
         display: block;
     }
 }
+
+/* 250315 팝업 추가 */
+.guide_popup {
+    width: 600px;
+    padding: 40px 20px 30px 20px;
+    background-color: #fff;
+}
+
+.guide_popup .title {
+    padding-bottom: 20px;
+    text-align: center;
+    color: #3f51b5;
+    font-size: 40px;
+    font-weight: 900;
+    letter-spacing: 0;
+}
+
+.guide_popup .box {
+    margin-bottom: 14px;
+    padding: 20px;
+    background-color: #f1f4f9;
+    border: none;
+}
+
+.guide_popup .box dt {
+    padding-bottom: 10px;
+    font-size: 16px;
+    font-weight: 700;
+}
+.guide_popup .box dd {
+    padding-left: 10px;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.guide_popup p {
+    margin: 10px 0 15px;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.guide_popup button {
+    display: block;
+    margin: 0 auto;
+    width: 500px;
+    padding: 14px 0;
+    font-size: 26px;
+    font-weight: 900;
+    border-radius: 4px;
+    background-color: #3f51b5;
+    color: #fff;
+}
+.guide_popup button:hover {
+    background-color: #283a9e;
+}
+.guide_popup button img {
+    padding-left: 10px;
+    vertical-align: -5px;
+}
+
+@media (max-width: 1360px) {
+    .guide_popup .title {
+        font-size: 34px;
+    }
+    .guide_popup .box_wrap {
+        height: 400px;
+        overflow-y: auto;
+    }
+}
+
+@media (max-width: 768px) {
+    .guide_popup {
+        width: 70%;
+    }
+    .guide_popup button {
+        width: 100%;
+    }
+    .guide_popup p {
+        margin: 20px 0 15px;
+    }
+}
+
+@media (max-width: 480px) {
+    .guide_popup {
+        width: 90%;
+        padding: 25px 20px 25px 20px;
+    }
+    .guide_popup .title {
+        padding-bottom: 14px;
+        font-size: 20px;
+    }
+    .guide_popup .box_wrap {
+        height: 340px;
+    }
+    .guide_popup .box {
+        margin-bottom: 10px;
+        padding: 16px;
+    }
+    .guide_popup .box dt {
+        padding-bottom: 6px;
+        font-size: 14px;
+    }
+    .guide_popup .box dd {
+        font-size: 13px;
+        line-height: 18px;
+    }
+    .guide_popup p {
+        font-size: 14px;
+    }
+    .guide_popup button {
+        font-size: 18px;
+        font-weight: 700;
+    }
+    .guide_popup button img {
+        width: 8px;
+        padding-left: 8px;
+        vertical-align: 0px;
+    }
+}
